writerfilter/source/dmapper/StyleSheetTable.cxx
@@ -1343,7 +1343,6 @@ static const sal_Char* const aStyleNamePairs[] =
     "TOC 7",                     "Contents 7",
     "TOC 8",                     "Contents 8",
     "TOC 9",                     "Contents 9",
-    "TOC Heading",               "Contents Heading",
     "TOCHeading",                "Contents Heading",
     "toc 1",                     "Contents 1",
     "toc 2",                     "Contents 2",
